--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
-  
+
 
 
 </head>
@@ -32,7 +32,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home
-              
+
             </a>
           </li>
           <li class="nav-item active">
@@ -63,7 +63,7 @@
 
 <p>Astronomical Ring for Access to Spectroscopy (ARAS) is an informal group of volunteers who aim to promote cooperation between professional and amateur astronomers in the field of spectroscopy.  To this end, ARAS has prepared the following roadmap:
 <ul>
-<li>Identify centers of interest for spectroscopic observation which could lead to useful, effective and motivating cooperation between professional and amateur astronomers.
+<li>Identify centers of interest for spectroscopic observations which could lead to useful, effective and motivating cooperation between professional and amateur astronomers.
 <li>Help develop the tools required to transform this cooperation into action (i.e. by publishing spectrograph building plans, organizing group purchasing to reduce costs, developing and validating observation protocols, managing a data base, identifying available resources in professional observatories (hardware, observation time), etc.
 <li>Develop an awareness and education policy for amateur astronomers through training sessions, the organization of pro/am seminars, by publishing documents (web pages), managing a forum, etc.
 <li>Encourage observers to use the spectrographs available in mission observatories and promote collaboration between experts, particularly variable star experts.
