--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">ARAS Spectral Database</h1>
         <h4>About ARAS initiative</h4><br>
-		<img src="http://astrosurf.com/aras/logos/aras_plat3.png" width="200" height="200"><br><br>
+		<img src="website_source/aras_plat3.png" width="200" height="200"><br><br>
 </div>
 
 <div class="col-lg-12 text-justify">
@@ -78,7 +78,7 @@
 <footer class="page-footer font-small blue">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3 navbar-dark bg-dark fixed-bottom" style="color:white">© 2020 Copyright: ARAS Group, Design: Jaroslav Merc
+  <div class="footer-copyright text-center py-3 navbar-dark bg-dark fixed-bottom" style="color:white">© 2021 Copyright: ARAS Group, Design & Functionality: Jaroslav Merc
   </div>
   <!-- Copyright -->
 
