--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <footer class="page-footer font-small blue">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3 navbar-dark bg-dark fixed-bottom" style="color:white">© 2020 Copyright: ARAS Group, Design: Jaroslav Merc
+  <div class="footer-copyright text-center py-3 navbar-dark bg-dark fixed-bottom" style="color:white">© 2021 Copyright: ARAS Group, Design & Functionality: Jaroslav Merc
   </div>
   <!-- Copyright -->
 
