--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
-  
+
 
 
 </head>
@@ -32,16 +32,16 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home
-              
+
             </a>
           </li>
           <li class="nav-item ">
             <a class="nav-link" href="about.html">About</a>
-			
+
           </li>
           <li class="nav-item ">
             <a class="nav-link" href="conditions.html">Conditions of Use</a>
-			
+
           </li>
           <li class="nav-item active">
             <a class="nav-link" href="#">Contact</a>
@@ -58,7 +58,7 @@
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">ARAS Spectral Database</h1>
         <h4>Contact</h4><br>
-		
+
 </div>
 
 <div class="col-lg-12 text-justify">
@@ -74,7 +74,7 @@
 <footer class="page-footer font-small blue">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3 navbar-dark bg-dark fixed-bottom" style="color:white">© 2020 Copyright: ARAS Group, Design: Jaroslav Merc
+  <div class="footer-copyright text-center py-3 navbar-dark bg-dark fixed-bottom" style="color:white">© 2021 Copyright: ARAS Group, Design & Functionality: Jaroslav Merc
   </div>
   <!-- Copyright -->
 
