--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 		 <a href="symbiotics.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Symbiotic Stars</a><br><br>
 		  <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Novae</a><br><br>
 		  <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Dwarf Novae</a><br><br>
-		 <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Nova-like Variables</a><br><br>
-	    <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Supernovae</a><br><br>
+<!--		 <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Nova-like Variables</a><br><br>
+	    <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Supernovae</a><br><br>-->
 <!--
 		<a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Red Giants</a>
 		  <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">M Stars</a>
