--- a/symbiotics.html
+++ b/symbiotics.html
@@ -63,7 +63,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style
 <p class="card-text">Number of stars: 69
 </p><p class="card-text">Number of spectra: 5804
-</p><p class="card-text">Last update: 2021-03-08</p>
+</p><p class="card-text">Last update: 2021-03-09</p>
 <br><br>
 <a href="#" class="btn btn-secondary">Observers</a>
         <a href="#" class="btn btn-secondary">Observatories</a>
@@ -80,7 +80,7 @@
 <p class="card-text">Current surveys: CI Cyg, AG Peg, BF Cyg, AX Per</p>
 <p class="card-text" style="margin-bottom:0.88cm;">Outbursts: CM Aql, V1413 Aql</p>
 		<br><br>
-		<p class="card-text" ><i>send spectra to francoismathieu.teyssier [at] bbox.fr</i></p>
+		<p class="card-text" ><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
 
 
 	  </div>
