--- a/agpeg.html
+++ b/agpeg.html
@@ -3442,7 +3442,7 @@
       <td>2018-07-09</td>
       <td>1:29</td>
       <td>58308.062</td>
-      <td>MVE</td>
+      <td>MER</td>
       <td>MAU-FR</td>
       <td>3688</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -4747,7 +4747,7 @@
       <td>2020-09-25</td>
       <td>3:56</td>
       <td>59117.165</td>
-      <td>SKEC</td>
+      <td>KSH</td>
       <td>CAR-US</td>
       <td>1000</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -4762,7 +4762,7 @@
       <td>2020-09-26</td>
       <td>3:30</td>
       <td>59118.146</td>
-      <td>SKEC</td>
+      <td>KSH</td>
       <td>CAR-US</td>
       <td>1000</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -4777,7 +4777,7 @@
       <td>2020-09-27</td>
       <td>3:13</td>
       <td>59119.134</td>
-      <td>SKEC</td>
+      <td>KSH</td>
       <td>CAR-US</td>
       <td>1000</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -4867,7 +4867,7 @@
       <td>2020-10-05</td>
       <td>2:29</td>
       <td>59127.104</td>
-      <td>SKEC</td>
+      <td>KSH</td>
       <td>CAR-US</td>
       <td>1000</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -4927,7 +4927,7 @@
       <td>2020-10-11</td>
       <td>2:42</td>
       <td>59133.113</td>
-      <td>SKEC</td>
+      <td>KSH</td>
       <td>CAR-US</td>
       <td>1000</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -4987,7 +4987,7 @@
       <td>2020-10-17</td>
       <td>2:26</td>
       <td>59139.102</td>
-      <td>SKEC</td>
+      <td>KSH</td>
       <td>CAR-US</td>
       <td>1000</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
