--- a/stha55.html
+++ b/stha55.html
@@ -256,7 +256,7 @@
       <td>2020-12-05</td>
       <td>5:48</td>
       <td>59188.242</td>
-      <td>SKEC</td>
+      <td>KSH</td>
       <td>CAR-US</td>
       <td>1000</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
