--- a/sulyn.html
+++ b/sulyn.html
@@ -637,7 +637,7 @@
       <td>2017-04-11</td>
       <td>1:02</td>
       <td>57854.044</td>
-      <td>JPGMVECBO</td>
+      <td>JPGMERCBO</td>
       <td>PDM-FR</td>
       <td>555</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -3082,7 +3082,7 @@
       <td>2020-12-18</td>
       <td>7:19</td>
       <td>59201.306</td>
-      <td>SKEC</td>
+      <td>KSH</td>
       <td>CAR-US</td>
       <td>1000</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
