--- a/v426sge.html
+++ b/v426sge.html
@@ -106,7 +106,7 @@
       <td>2018-08-12</td>
       <td>1:23</td>
       <td>58342.891</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>568</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -121,7 +121,7 @@
       <td>2018-08-13</td>
       <td>3:00</td>
       <td>58343.959</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>599</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -136,7 +136,7 @@
       <td>2018-08-16</td>
       <td>1:49</td>
       <td>58346.910</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>573</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -151,7 +151,7 @@
       <td>2018-08-17</td>
       <td>2:15</td>
       <td>58347.927</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>595</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -166,7 +166,7 @@
       <td>2018-08-18</td>
       <td>1:47</td>
       <td>58348.908</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>607</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -181,7 +181,7 @@
       <td>2018-08-19</td>
       <td>3:26</td>
       <td>58349.976</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>564</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -196,7 +196,7 @@
       <td>2018-08-20</td>
       <td>2:59</td>
       <td>58350.958</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>576</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -211,7 +211,7 @@
       <td>2018-08-30</td>
       <td>9:51</td>
       <td>58360.827</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>573</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -226,7 +226,7 @@
       <td>2018-09-16</td>
       <td>1:40</td>
       <td>58377.903</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>571</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -241,7 +241,7 @@
       <td>2018-09-17</td>
       <td>9:04</td>
       <td>58378.795</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>561</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -256,7 +256,7 @@
       <td>2018-10-13</td>
       <td>8:53</td>
       <td>58404.787</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>581</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -271,7 +271,7 @@
       <td>2018-10-14</td>
       <td>0:24</td>
       <td>58405.850</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>500</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -286,7 +286,7 @@
       <td>2018-10-17</td>
       <td>8:18</td>
       <td>58408.763</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>551</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -301,7 +301,7 @@
       <td>2018-10-31</td>
       <td>7:47</td>
       <td>58422.742</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>503</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -316,7 +316,7 @@
       <td>2018-11-05</td>
       <td>7:40</td>
       <td>58427.737</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>635</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -331,7 +331,7 @@
       <td>2018-11-07</td>
       <td>7:15</td>
       <td>58429.719</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>522</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -346,7 +346,7 @@
       <td>2018-11-09</td>
       <td>8:00</td>
       <td>58431.750</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>565</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -361,7 +361,7 @@
       <td>2019-06-23</td>
       <td>1:46</td>
       <td>58657.907</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>674</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
@@ -376,7 +376,7 @@
       <td>2019-06-25</td>
       <td>3:11</td>
       <td>58659.966</td>
-      <td>DPV</td>
+      <td>PAD</td>
       <td>KOL-SK</td>
       <td>688</td>
       <td><svg xmlns="http://www.w3.org/2000/svg" width="5" height="16" fill="#007bff" class="bi bi-square-fill" viewBox="1 0 5 16"><path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2z"/></svg></td>
