--- a/symbiotics.html
+++ b/symbiotics.html
@@ -60,12 +60,12 @@
     <div class="card">
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
- <style>table {text-align: center;}table thead th {text-align: center;}</style
+ <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 69
 </p><p class="card-text">Number of spectra: 5804
 </p><p class="card-text">Last update: 2021-03-09</p>
 <br><br>
-<a href="#" class="btn btn-secondary">Observers</a>
+<a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="#" class="btn btn-secondary">Observatories</a>
 
       </div>
