Email address update.

--- a/as323.html
+++ b/as323.html
@@ -75,7 +75,7 @@
 <p class="card-text">First spectrum:   2019-07-02</p>
 <p class="card-text">Last spectrum:   2019-07-13</p>
 <br><br>
-<p class="card-text" style="margin-bottom:0.055cm;"><i>send spectra to francoismathieu.teyssier [at] bbox.fr</i></p>
+<p class="card-text" style="margin-bottom:0.055cm;"><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
       </div>
     </div>
   </div>
