--- a/axper.html
+++ b/axper.html
@@ -30,7 +30,8 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item ">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="index.html">Home
+            </a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
@@ -74,7 +75,7 @@
 <p class="card-text">First spectrum:   2011-10-04</p>
 <p class="card-text">Last spectrum:   2021-03-07</p>
 <br><br>
-<p class="card-text" style="margin-bottom:0.055cm;"><i>send spectra to francoismathieu.teyssier [at] bbox.fr</i></p>
+<p class="card-text" style="margin-bottom:0.055cm;"><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
       </div>
     </div>
   </div>
