--- a/rsoph.html
+++ b/rsoph.html
@@ -75,7 +75,7 @@
 <p class="card-text">First spectrum:   2011-03-23</p>
 <p class="card-text">Last spectrum:   2020-10-01</p>
 <br><br>
-<p class="card-text" style="margin-bottom:0.055cm;"><i>send spectra to francoismathieu.teyssier [at] bbox.fr</i></p>
+<p class="card-text" style="margin-bottom:0.055cm;"><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
       </div>
     </div>
   </div>
