--- a/v694mon.html
+++ b/v694mon.html
@@ -75,7 +75,7 @@
 <p class="card-text">First spectrum:   2011-03-03</p>
 <p class="card-text">Last spectrum:   2021-02-26</p>
 <br><br>
-<p class="card-text" style="margin-bottom:0.055cm;"><i>send spectra to francoismathieu.teyssier [at] bbox.fr</i></p>
+<p class="card-text" style="margin-bottom:0.055cm;"><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
       </div>
     </div>
   </div>
