--- a/zzcmi.html
+++ b/zzcmi.html
@@ -75,7 +75,7 @@
 <p class="card-text">First spectrum:   2011-09-29</p>
 <p class="card-text">Last spectrum:   2021-02-27</p>
 <br><br>
-<p class="card-text" style="margin-bottom:0.055cm;"><i>send spectra to francoismathieu.teyssier [at] bbox.fr</i></p>
+<p class="card-text" style="margin-bottom:0.055cm;"><i>send spectra to francoismathieu.teyssier [at] gmail.com & arasdatabase [at] gmail.com</i></p>
       </div>
     </div>
   </div>
