--- a/chcyg.html
+++ b/chcyg.html
@@ -90,7 +90,7 @@
 </div>
 <br>
 
-<a href="archives/chcyg1.zip" class="btn btn-secondary">Download 2011-2018 spectra as *.zip file (71.3 MB)</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="archives/chcyg2.zip" class="btn btn-secondary">Download 2019-2020 spectra as *.zip file (21.0 MB)</a>
+<a href="archives/chcyg1.zip" class="btn btn-secondary">Download 2011-2018 spectra as *.zip file (71.3 MB)</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="archives/chcyg2.zip" class="btn btn-secondary">Download 2019-2020 spectra as *.zip file (21.0 MB)</a><br><br>
 <table border="0" class="dataframe display" id="table_id">
   <thead>
     <tr style="text-align: right;">
