--- a/symbiotics.html
+++ b/symbiotics.html
@@ -62,8 +62,8 @@
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 69
-</p><p class="card-text">Number of spectra: 5816
-</p><p class="card-text">Last update: 2021-03-11, 13:28</p>
+</p><p class="card-text">Number of spectra: 5810
+</p><p class="card-text">Last update: 2021-03-11, 13:42</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="#" class="btn btn-secondary">Observatories</a>
@@ -471,7 +471,7 @@
       <td><a href="nqgem.html">NQ Gem</a></td>
       <td>07 31 54.52</td>
       <td>+24 30 12.54</td>
-      <td>87</td>
+      <td>86</td>
       <td>2013-04-01</td>
       <td>2021-03-07</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-03-07 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -543,7 +543,7 @@
       <td><a href="rsoph.html">RS Oph</a></td>
       <td>17 50 13.16</td>
       <td>-06 42 28.48</td>
-      <td>132</td>
+      <td>131</td>
       <td>2011-03-23</td>
       <td>2021-03-08</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-03-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -675,7 +675,7 @@
       <td><a href="sulyn.html">SU Lyn</a></td>
       <td>06 42 55.14</td>
       <td>+55 28 27.23</td>
-      <td>208</td>
+      <td>207</td>
       <td>2016-05-02</td>
       <td>2021-03-06</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-03-06 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -771,7 +771,7 @@
       <td><a href="v1413aql.html">V1413 Aql</a></td>
       <td>19 03 46.84</td>
       <td>+16 26 16.97</td>
-      <td>60</td>
+      <td>59</td>
       <td>2013-08-10</td>
       <td>2021-03-09</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-03-09 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -903,7 +903,7 @@
       <td><a href="yyher.html">YY Her</a></td>
       <td>18 14 34.19</td>
       <td>+20 59 21.19</td>
-      <td>40</td>
+      <td>38</td>
       <td>2011-05-25</td>
       <td>2021-03-08</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-03-08 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
@@ -924,7 +924,7 @@
       <td>1</td>
     </tr>
     <tr>
-      <td><a href="zzcmi.html">ZZ Cmi</a></td>
+      <td><a href="zzcmi.html">ZZ CMi</a></td>
       <td>07 24 14.00</td>
       <td>+08 53 51.80</td>
       <td>68</td>
