--- a/symbiotics.html
+++ b/symbiotics.html
@@ -16,6 +16,14 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
 <link rel="icon" href="website_source/ico.png">
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NR5908WT2C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NR5908WT2C');
+</script>
 
 </head>
 
@@ -63,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 69
 </p><p class="card-text">Number of spectra: 5821
-</p><p class="card-text">Last update: 2021-03-11, 15:12</p>
+</p><p class="card-text">Last update: 2021-03-12, 09:40</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
