--- a/v694mon.html
+++ b/v694mon.html
@@ -16,6 +16,14 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
 <link rel="icon" href="website_source/ico.png">
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NR5908WT2C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NR5908WT2C');
+</script>
 
 </head>
 
