--- a/conditions.html
+++ b/conditions.html
@@ -77,7 +77,7 @@
     <li>If the publication includes, or is linked to, a table of observations, it is strongly encouraged that this should include the names of the observers.</li>
     <li>It is the responsibility of the lead author to consider including observers as co-authors if they believe their observations have made a substantial contribution to the analysis.</li>
     <li>Authors are strongly recommended to inform the ARAS Team via the following email address prior to any publication using spectra from the database
-to confirm the Acknowledgement is compliant with the conditions of use: francoismathieu.teyssier [@] gmail.com</li>
+to confirm the Acknowledgement is compliant with the conditions of use: francoismathieu.teyssier [at] gmail.com</li>
 </ul>
 <p>François Teyssier (FR), David Boyd (UK), Forrest Sims (US)<br>2020-12-28</p>
 
