--- a/symbiotics.html
+++ b/symbiotics.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>ARAS Spectral Database</title>
+  <title>ARAS Spectral Database: Symbiotics</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -71,7 +71,7 @@
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
 <p class="card-text">Number of stars: 69
 </p><p class="card-text">Number of spectra: 5821
-</p><p class="card-text">Last update: 2021-03-12, 10:19</p>
+</p><p class="card-text">Last update: 2021-03-12, 18:17</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
