--- a/about.html
+++ b/about.html
@@ -8,13 +8,13 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>ARAS Spectral Database: About</title>
+  <title>ARAS Spectral Database</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="database/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.css">
-<link rel="icon" href="website_source/ico.png">
+<link rel="icon" href="database/website_source/ico.png">
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NR5908WT2C"></script>
 <script>
@@ -25,6 +25,11 @@
   gtag('config', 'G-NR5908WT2C');
 </script>
 
+<style type="text/css">
+<!--
+.Style1 {font-size: 1.5rem}
+-->
+</style>
 </head>
 
 <body>
@@ -32,14 +37,14 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">ARAS Spectral Database</a>
+      <a class="navbar-brand" href="database/index.html">ARAS Spectral Database</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home
+            <a class="nav-link" href="database/index.html">Home
 
             </a>
           </li>
@@ -48,10 +53,10 @@
 			<span class="sr-only">(current)</span>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="conditions.html">Conditions of Use</a>
+            <a class="nav-link" href="database/conditions.html">Conditions of Use</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="database/contact.html">Contact</a>
           </li>
         </ul>
       </div>
@@ -64,7 +69,7 @@
       <div class="col-lg-12 text-center">
         <h1 class="mt-5">ARAS Spectral Database</h1>
         <h4>About ARAS initiative</h4><br>
-		<img src="website_source/aras_plat3.png" width="200" height="200"><br><br>
+		<img src="database/website_source/aras_plat3.png" width="200" height="200"><br><br>
 </div>
 
 <div class="col-lg-12 text-justify">
@@ -77,8 +82,20 @@
 <li>Encourage observers to use the spectrographs available in mission observatories and promote collaboration between experts, particularly variable star experts.
 <li>Create a global observation network.
 </ul>
-<p>The purpose of ARAS in fostering the participation of amateur astronomers in scientific projects in the field of spectroscopy is not to implement and coordinate observing campaigns. This is the role of astronomy research scientists, laboratories or international consortiums. ARAS will however attempt to consolidate the acquired data into a web database and will ensure that the quality of its data is compatible with scientific processing methods.
-      </div>
+<p>ARAS has developped in cooperation with professionnal teams an observing program of Be Stars relied on the BESS database which collecte professional and amateurs spectra: <a href="http://basebe.obspm.fr/basebe/">http://basebe.obspm.fr/basebe/</a><br>
+  A monthly Letter provided by Valérie Desnoux summarize the observations and main events.
+<p>The ARAS website developped by Christian Buil provides a huge amount of information about technics and observations: <a href="http://astrosurf.com/aras/">http://astrosurf.com/aras/</a>
+<p>Last but not least, the ARAS forum allows a strong link between observers in the field of spectroscopy, from technics to observing programs with more than 15000 posts since 2011: <a href="http://www.spectro-aras.com/forum/index.php">http://www.spectro-aras.com/forum/index.php</a><br> 
+  The forum is hosted by OVH with the financial support of Shelyak (<a href="https://www.shelyak.com/">https://www.shelyak.com/</a>)
+<p align="center" class="Style1">Eruptive stars section 
+<p>Spectroscopic monitoring of eruptive stars (e.g. symbiotic binaries, classical novae) by amateurs around the world, in both the northern and southern hemispheres, is a fundamental activity of the ARAS (Astronomical Ring for Amateur Spectroscopy) initiative. The group of volunteers demonstrates what can be accomplished with a network of independent, very small telescopes (from 20 to 60 cm), furnished with spectrographs of different resolution, from 500 to 15000, and covering the range from 3600 to 9000 Å. The observing program concentrates on bright symbiotic stars (67, to date) and novae (41, to date). The main features of the ARAS activity are rapid response to alerts, long term monitoring and high cadence. A part of the program involves collaborations based on requests from professional teams (e.g. CH Cyg, AG Dra, R Aqr, SU Lyn, T CrB) for long term monitoring or specific events.
+<p>The purpose of ARAS in fostering the participation of amateur astronomers in scientific projects in the field of spectroscopy is  to implement and coordinate observing campaigns and monitorings. ARASs also responds to requests Astronomy research scientists, laboratories or international consortiums. ARAS will  attempt to consolidate the acquired data into a web database and will ensure that the quality of its data is compatible with scientific processing methods.
+
+<p>ARAS will  attempt to consolidate the acquired data into a web database and will ensure that the quality of its data is compatible with scientific processing methods.
+<p>The observations are summarized in a quaterly news letter which is indexed in NASA/ASDS. The previous issues can be downloaded from: <a href="http://www.astrosurf.com/aras/novae/InformationLetter/InformationLetter.html">http://www.astrosurf.com/aras/novae/InformationLetter/InformationLetter.html</a>
+<p>At date, about 100 publications are partially or mainly based on ARAS Eruptive Stars spectra. 
+<p>
+</div>
     </div>
   </div>
 
@@ -94,8 +111,8 @@
 <!-- Footer -->
 
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.slim.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="database/vendor/jquery/jquery.slim.min.js"></script>
+  <script src="database/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.js"></script>
 
 </body>
