Update CN Cha status

--- a/cncha.html
+++ b/cncha.html
@@ -90,7 +90,13 @@
 
 </div>
 
-<br><style>table {text-align: center;}table thead th {text-align: center;}</style><a href="archives/cncha.zip" class="btn btn-secondary">Download all spectra as *.zip file (4.2 MB)</a>
+<br><style>table {text-align: center;}table thead th {text-align: center;}</style><div class="card text-white bg-dark mb-3">
+<div class="card-body">
+<h5 class="card-title">Symbiotic nova outburst</h5></div>
+</div>
+<br>
+
+<a href="archives/cncha.zip" class="btn btn-secondary">Download all spectra as *.zip file (4.2 MB)</a>
 <table border="0" class="dataframe display" id="table_id">
   <thead>
     <tr style="text-align: right;">
