update observers list

--- a/observers.html
+++ b/observers.html
@@ -669,7 +669,7 @@
       <td>VLZ</td>
       <td>Peter Velez</td>
       <td>Australia</td>
-      <td></td>
+      <td>peter@oblaw.net.au</td>
       <td></td>
     </tr>
     <tr>
@@ -682,7 +682,7 @@
     <tr>
       <td>YBU</td>
       <td>Yolande Buchet </td>
-      <td>Fanrce</td>
+      <td>France</td>
       <td></td>
       <td></td>
 
