--- a/observers.html
+++ b/observers.html
@@ -415,9 +415,9 @@
     </tr>
     <tr>
       <td>KGU</td>
-      <td></td>
+      <td>Kevin Gurney</td>
       <td >United Kingdom</td>
-      <td></td>
+      <td>k.gurney@sheffield.ac.uk</k.gurney></td>
       <td></td>
     </tr>
     <tr>
