update observers list html

--- a/observers.html
+++ b/observers.html
@@ -310,9 +310,9 @@
       <td></td>
     </tr>
       <td>IBR</td>
-      <td>Ibrahima Diabassourra</td>
+      <td>Ibrahima Diarrasouba</td>
       <td>France</td>
-      <td></td>
+      <td>idiarrass@yahoo.com</td>
       <td></td>
     </tr>
     <tr>
