New spactra 2021-04-24 + Correction of country for two observers

--- a/observers.html
+++ b/observers.html
@@ -108,7 +108,7 @@
     <tr>
       <td>AST</td>
       <td>Albert Stiewing</td>
-      <td >United Kingdom</td>
+      <td >USA</td>
       <td></td>
       <td></td>
     </tr>
@@ -186,7 +186,7 @@
     <tr>
       <td>CUR</td>
       <td>Sean Curry</td>
-      <td >United Kingdom</td>
+      <td >USA</td>
       <td></td>
       <td></td>
     </tr>
