--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 		   <a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">B stars</a><br><br>
 		<a href="#" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Eruptive stars</a>-->
 		 <a href="symbiotics.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Symbiotic Stars</a><br><br>
-		  <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Novae</a><br><br>
+		  <a href="novae.html" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Novae</a><br><br>
 		  <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Dwarf Novae</a><br><br>
 <!--		 <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Nova-like Variables</a><br><br>
 	    <a href="#" class="btn btn-light btn-lg active" role="button" aria-pressed="true">Supernovae</a><br><br>-->
